# SystemLogger

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
systemlogger/: __init__.py
test_systemlogger/: test_base.py
